# workspace_fs

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  default.toml
crates/workspace_fs_client/: Cargo.toml  README.md
crates/workspace_fs_client/src/: client_proxy_app.rs  lib.rs  main.rs  user_config.rs
crates/workspace_fs_client/src/config/: cli.rs  mod.rs  user_config.rs
crates/workspace_fs_client/src/proxy/: http_proxy.rs
crates/workspace_fs_client/src/repl/: runner.rs
crates/workspace_fs_client/src/runtime/: app.rs
crates/workspace_fs_client/src/server_process/: mod.rs  supervisor.rs
crates/workspace_fs_client/src/task_runner/: task_runner.rs
crates/workspace_fs_server/: Cargo.toml  README.md
crates/workspace_fs_server/src/: config.rs  identity.rs  info.rs  lib.rs  main.rs  plugin.rs  policy.rs  repository.rs  server_app.rs  workspace.rs
crates/workspace_fs_server/src/application/: workspace_service.rs
crates/workspace_fs_server/src/domain/: mod.rs  policy.rs  workspace_path.rs
crates/workspace_fs_server/src/http/: cli.rs  error.rs  mod.rs  response.rs  router.rs  server.rs
crates/workspace_fs_server/src/infra/: fs_repository.rs  mod.rs  plugin_runner.rs  repository_config.rs
default_plugins/katex_pre/: README.md
default_plugins/katex_pre/src/: katex_pre.css  katex_pre.js
default_plugins/md_preview/: README.md  build.mjs  build_index.mjs  package-lock.json  package.json
default_plugins/md_preview/katex/: katex_pre.css  katex_pre.js  katex_transform.js
default_plugins/md_preview/src/: markdown_extensions.js  markdown_to_hast.js  markdown_viewer.js
default_plugins/md_preview/src/viewer/: directory_view.css  directory_view.html  directory_view.js  markdown_content.css  markdown_runtime.js  md_editor.css  md_editor.html  md_editor.js  md_preview.css  md_preview.html  md_preview.js  viewer_common.js
example_repository/: README.md  macros.txt
example_repository/.repo/: config.toml
example_repository/yoho/: hello.md  world.md
md_preview/: build.mjs
md_preview/src/: markdown_extensions.js  markdown_to_hast.js  markdown_viewer.js
md_preview/src/viewer/: directory_view.css  directory_view.html  directory_view.js  markdown_runtime.js  md_editor.css  md_editor.html  md_editor.js  md_preview.css  md_preview.html  md_preview.js
src/: identity.rs  main.rs  path.rs  plugin.rs  policy.rs  repository.rs
workspace_fs/: README.md  TODO.md
workspace_fs/src/: config.rs  main.rs  path.rs  plugin.rs  policy.rs  repository.rs  workspace.rs
