[workspace]
members = ["crates/workspace_fs_server", "crates/workspace_fs_client"]
default-members = ["crates/workspace_fs_client"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
camino = { version = "1.1", features = ["serde1"] }
mime_guess = "2.0"
reqwest = { version = "0.12", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1.44", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync"] }
toml = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
workspace_fs_server = { path = "crates/workspace_fs_server" }
workspace_fs_client = { path = "crates/workspace_fs_client" }
